--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyFirebaseFirestoreActivity"></activity>
-        <activity android:name=".ListActivity" />
+        <activity android:name=".FormActivity"></activity>
+        <activity android:name=".MyFirebaseFirestoreActivity" />
         <activity android:name=".MyFirebaseMessagingService" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".CreateAccountActivity" />
