--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HistoActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HistoActivity" />
         <activity android:name=".FormActivity" />
         <activity android:name=".MyFirebaseFirestoreActivity" />
         <activity android:name=".MyFirebaseMessagingService" />
