--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.isen.secumobileisen">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,13 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ListActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ListActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".HistoActivity" />
         <activity android:name=".FormActivity" />
-        <activity android:name=".MyFirebaseFirestoreActivity" />
-        <activity android:name=".MyFirebaseMessagingService" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".MainActivity" />
@@ -28,14 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service
-            android:name=".MyFirebaseMessagingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
     </application>
 
 </manifest>
